# local-sentry

./: README.md  local-entry-point.sh  local-sentry.Dockerfile  local-sentry.sh  pyproject.toml
local_sentry/: local_sentry.py  test.sh  test_sentry.py
